# NebulaEngine

./: README.md
External Libs/assimp/lib/: assimp-vc143-mtd.exp  assimp-vc143-mtd.lib
NebulaEngine/: CMakeLists.txt  NebulaEngine.cpp  NebulaEngine.sln  NebulaEngine.vcxproj  NebulaEngine.vcxproj.filters  camera.cpp  camera.h  helpers.cpp  helpers.h  level.cpp  level.h  libs.h  mesh.cpp  mesh.h  mesh_loader.cpp  mesh_loader.h  shader.cpp  shader.h  structs.h  testlevel.cpp  testlevel.h  transform.h
NebulaEngine/Resources/Meshes/: Suzanne.fbx  testobj.fbx
NebulaEngine/Shaders/: FS_BaseColor.glsl  FS_Grid.glsl  FS_Phong.glsl  FS_VertexColor.glsl  FragmentShader.glsl  VS_BaseColor.glsl  VS_Phong.glsl  VS_VertexColor.glsl  VertexShader.glsl
NebulaEngine/headers/: camera.h  level.h  libs.h  mesh.h  mesh_loader.h  shader.h  transform.h
NebulaEngine/source/: level.cpp  mesh.cpp  mesh_loader.cpp  shader.cpp  testlevel.cpp
